// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feature /> renders the <Feature /> with just a subtitle 1`] = `
<div
  class="feature__Container-sc-5p06o9-0 bmtgto"
>
  <h2
    class="feature__SubTitle-sc-5p06o9-2 dhZySf"
  >
    Watch anywhere. Cancel at any time!
  </h2>
</div>
`;

exports[`<Feature /> renders the <Feature /> with just a title 1`] = `
<div
  class="feature__Container-sc-5p06o9-0 bmtgto"
>
  <h1
    class="feature__Title-sc-5p06o9-1 cGUar"
  >
    Unlimited movies, TV programs and more!
  </h1>
</div>
`;

exports[`<Feature /> renders the <Feature /> with populated data 1`] = `
<div
  class="feature__Container-sc-5p06o9-0 bmtgto"
>
  <h1
    class="feature__Title-sc-5p06o9-1 cGUar"
  >
    Unlimited movies, TV programs and more!
  </h1>
  <h2
    class="feature__SubTitle-sc-5p06o9-2 dhZySf"
  >
    Watch anywhere. Cancel at any time!
  </h2>
</div>
`;
